--- a/app/pom.xml
+++ b/app/pom.xml
@@ -120,9 +120,9 @@
 				<groupId>org.flywaydb</groupId>
 				<artifactId>flyway-maven-plugin</artifactId>
 				<configuration>
-					<url>jdbc:mysql://mysqldb:3306/docker_to_aws_with_java?useTimezone=true&amp;serverTimezone=UTC&amp;useSSL=false</url>
-					<user>root</user>
-					<password>docker</password>
+					<url>jdbc:mysql://dockertoawswithjava.crsww62cqoq4.us-east-2.rds.amazonaws.com:3306/docker_to_aws_with_java?useTimezone=true&amp;serverTimezone=UTC&amp;useSSL=false</url>
+					<user>docker</user>
+					<password>awsdocker2024</password>
 				</configuration>
 				<dependencies>
 					<dependency>
