--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -3,28 +3,28 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
 # DB LOCAL
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/docker_to_aws_with_java?useTimezone=true&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/docker_to_aws_with_java?useTimezone=true&serverTimezone=UTC&useSSL=false
 #spring.datasource.username=root
 #spring.datasource.password=superuser
 
 # DB DOCKER
-spring.datasource.url=jdbc:mysql://mysqldb:3306/docker_to_aws_with_java?useTimezone=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=docker
+#spring.datasource.url=jdbc:mysql://mysqldb:3306/docker_to_aws_with_java?useTimezone=true&serverTimezone=UTC&useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=docker
 
 # DB AWS
-#spring.datasource.url=jdbc:mysql://dockertoawswithjava.cumvzt8ysya2.us-east-2.rds.amazonaws.com:3306/docker_to_aws_with_java?useTimezone=true&serverTimezone=UTC
-#spring.datasource.username=docker
-#spring.datasource.password=docker123
+spring.datasource.url=jdbc:mysql://dockertoawswithjava.crsww62cqoq4.us-east-2.rds.amazonaws.com:3306/docker_to_aws_with_java?useTimezone=true&serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=docker
+spring.datasource.password=awsdocker2024
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 # JPA Settings
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = none
 spring.jpa.show-sql=false
 
 # Flyway Configs
-spring.flyway.locations=classpath:db/migration
+#spring.flyway.locations=classpath:db/migration
 
 # Flyway LOCAL
 #spring.flyway.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/docker_to_aws_with_java?serverTimezone=UTC&useSSL=false
@@ -32,9 +32,14 @@ spring.flyway.locations=classpath:db/migration
 #spring.flyway.password=superuser
 
 # Flyaway - DOCKER
-spring.flyway.url=jdbc:mysql://mysqldb:3306/docker_to_aws_with_java?serverTimezone=UTC&useSSL=false
-spring.flyway.user=root
-spring.flyway.password=docker
+#spring.flyway.url=jdbc:mysql://mysqldb:3306/docker_to_aws_with_java?serverTimezone=UTC&useSSL=false
+#spring.flyway.user=root
+#spring.flyway.password=docker
+
+# Flyaway - AWS
+spring.flyway.url=jdbc:mysql://dockertoawswithjava.crsww62cqoq4.us-east-2.rds.amazonaws.com:3306/docker_to_aws_with_java?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
+spring.flyway.user=docker
+spring.flyway.password=awsdocker2024
 
 # Jackson Configs
 spring.jackson.default-property-inclusion=NON_NULL
