--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -46,7 +46,7 @@ permissions:
 jobs:
   deploy:
     name: Deploy
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-16.04
     environment: production
 
     steps:
