--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -45,8 +45,8 @@ permissions:
 
 jobs:
   deploy:
-    name: Deploy
-    runs-on: ubuntu-16.04
+    name: Deploy on AWS
+    runs-on: self-hosted
     environment: production
 
     steps:
