--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -27,8 +27,8 @@
 name: Deploy to Amazon ECS
 
 on:
-  push:
-    branches: [ "main" ]
+  release:
+    types: [published]
 
 env:
   AWS_REGION: us-east-2                                     # set this to your preferred AWS region, e.g. us-west-1
@@ -50,6 +50,14 @@ jobs:
     environment: production
 
     steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v1
+      with:
+        java-version: 11
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
+    
     - name: Checkout
       uses: actions/checkout@v3
 
@@ -68,6 +76,7 @@ jobs:
       id: build-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: $ECR_REPOSITORY
         IMAGE_TAG: ${{ github.sha }}
       run: |
         # Build a docker container and
@@ -76,7 +85,7 @@ jobs:
         cd app/
         mvn build package
         cd ..
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG --build-arg ACCESS_ARG=${{ secrets.AWS_ACCESS_KEY_ID }} --build-arg SECRET_ARG=${{ secrets.AWS_SECRET_ACCESS_KEY }} .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
