--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -56,8 +56,11 @@ jobs:
       with:
         java-version: 11
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
-    
+      run: |
+        cd app/
+        mvn -B package --file pom.xml
+        cd ..
+        
     - name: Checkout
       uses: actions/checkout@v3
 
