--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -73,7 +73,9 @@ jobs:
 
     - name: Login to Amazon ECR
       id: login-ecr
-      run: echo ${{ secrets.AWS_ACCESS_KEY_ID }} | docker login --username ${{ secrets.AWS_SECRET_ACCESS_KEY }} --password-stdin
+      uses: aws-actions/amazon-ecr-login@v2
+      with:
+        mask-password: 'false'
 
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
