--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -73,7 +73,9 @@ jobs:
 
     - name: Login to Amazon ECR
       id: login-ecr
-      run: aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin secrets.AWS_ACCOUNT_ID.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com
+      run: |
+        docker ps -a
+        aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin secrets.AWS_ACCOUNT_ID.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com
 
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
