--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -74,8 +74,7 @@ jobs:
     - name: Login to Amazon ECR
       id: login-ecr
       run: |
-        $env:DOCKER_HOST="npipe:////./pipe/docker_engine"
-        docker run --rm -it -v c/:/windows_mount alpine ls /windows_mount
+        $env:DOCKER_HOST = 'npipe:////./pipe/podman-machine-default'
         docker ps -a
         aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin secrets.AWS_ACCOUNT_ID.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com
 
