--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -74,9 +74,10 @@ jobs:
     - name: Login to Amazon ECR
       id: login-ecr
       run: |
-        $env:DOCKER_HOST = 'npipe:////./pipe/podman-machine-default'
         docker ps -a
         aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin secrets.AWS_ACCOUNT_ID.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com
+      env:
+        DOCKER_HOST: unix:///var/run/docker.sock
 
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
