--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -77,7 +77,7 @@ jobs:
         docker ps -a
         aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin secrets.AWS_ACCOUNT_ID.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com
       env:
-        DOCKER_HOST: unix:///var/run/docker.sock
+        DOCKER_HOST: npipe:////./pipe/docker_engine
 
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
