--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -74,6 +74,7 @@ jobs:
     - name: Login to Amazon ECR
       id: login-ecr
       run: |
+        sudo usermod -aG docker $USER
         docker ps -a
         aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin secrets.AWS_ACCOUNT_ID.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com
       env:
