--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -46,7 +46,7 @@ permissions:
 jobs:
   deploy:
     name: Deploy on AWS
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     environment: production
 
     steps:
