--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -86,6 +86,7 @@ jobs:
         # push it to ECR so that it can
         # be deployed to ECS.
         cd app/
+        mvn clean package 
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG --build-arg ACCESS_ARG=${{ secrets.AWS_ACCESS_KEY_ID }} --build-arg SECRET_ARG=${{ secrets.AWS_SECRET_ACCESS_KEY }} .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
