--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,6 +1,7 @@
 FROM openjdk:11-jdk-slim
 VOLUME /tmp
-ADD app/target/docker-to-aws-with-java-0.0.1-SNAPSHOT.jar app.jar
+ARG JAR_FILE=app/target/*.jar
+COPY ${JAR_FILE} app.jar
 EXPOSE 8080
 RUN bash -c 'touch /app.jar'
 ENTRYPOINT ["java", "-Djava.security.egd=file:/dev/./urandom", "-jar", "/app.jar"]
