--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -88,7 +88,7 @@ jobs:
         # be deployed to ECS.
         mvn clean package
         docker-compose up -d --build
-        docker tag docker-to-aws-with-java:latest $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG --build-arg ACCESS_ARG=${{ secrets.AWS_ACCESS_KEY_ID }} --build-arg SECRET_ARG=${{ secrets.AWS_SECRET_ACCESS_KEY }} .
+        docker tag docker-to-aws-with-java:latest $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
