Edit RDS config

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 #spring.datasource.password=docker
 
 # DB AWS
-spring.datasource.url=jdbc:mysql://dockertoawswithjava.crsww62cqoq4.us-east-2.rds.amazonaws.com:3306/docker_to_aws_with_java?useTimezone=true&serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://dockertoawswithjava.cpy4w2qo6qlh.us-east-1.rds.amazonaws.com:3306/docker_to_aws_with_java?useTimezone=true&serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=docker
 spring.datasource.password=awsdocker2024
 
@@ -37,7 +37,7 @@ spring.jpa.show-sql=false
 #spring.flyway.password=docker
 
 # Flyaway - AWS
-spring.flyway.url=jdbc:mysql://dockertoawswithjava.crsww62cqoq4.us-east-2.rds.amazonaws.com:3306/docker_to_aws_with_java?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
+spring.flyway.url=jdbc:mysql://dockertoawswithjava.cpy4w2qo6qlh.us-east-1.rds.amazonaws.com:3306/docker_to_aws_with_java?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
 spring.flyway.user=docker
 spring.flyway.password=awsdocker2024
 
