--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -4,4 +4,4 @@ ARG JAR_FILE=app/target/*.jar
 COPY ${JAR_FILE} app.jar
 EXPOSE 8080
 RUN bash -c 'touch /app.jar'
-ENTRYPOINT ["java", "-Djava.security.egd=file:/dev/./urandom", "-jar",
+ENTRYPOINT ["java", "-Djava.security.egd=file:/dev/./urandom", "-jar", "/app.jar"]
