--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -32,7 +32,7 @@ on:
 
 env:
   AWS_REGION: us-east-2                                    # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: trainingrepo                             # set this to your Amazon ECR repository name
+  ECR_REPOSITORY: trainningrepo                             # set this to your Amazon ECR repository name
   ECS_SERVICE: training-service-fargate                    # set this to your Amazon ECS service name
   ECS_CLUSTER: training-cluster-fargate                    # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: training-task-definition            # set this to the path to your Amazon ECS task definition
