--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -21,14 +21,22 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+    
     - name: Build with Maven
       run: |
         cd app/
         mvn -B package --file pom.xml
+        cd ..
+        
+    - name: Test with Maven
+      run: |
+        cd app/
+        mvn test
         cd ..
