--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -31,6 +31,8 @@ jobs:
     - name: Build with Maven
       run: |
         cd app/
+        cd..
+        cd app/
         mvn -B package --file pom.xml
         cd ..
         
